sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:8: error: not found: value changed
						changed = true ; 
                                                ^AlgBubbleSort3:10: error: not found: value changed
					if(!changed){
                                            ^